// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ciceromark <-> html converts acceptance.json to and from CiceroMark 1`] = `
"<html>
<head><meta charset="UTF-8"></head>
<body>
<div class="document">
<h1>Heading</h1>
<p>And below is a <strong>clause</strong>.</p>
<div class="clause" name="deliveryClause" elementType="org.accordproject.acceptanceofdelivery@1.0.0.AcceptanceOfDeliveryClause">
<h2>Acceptance of Delivery.</h2>
<p><span class="variable" name="shipper" elementType="org.accordproject.organization@0.2.0.Organization" identifiedBy="identifier">"Party A"</span> will be deemed to have completed its delivery obligations
if in <span class="variable" name="receiver" elementType="org.accordproject.organization@0.2.0.Organization" identifiedBy="identifier">"Party B"</span>'s opinion, the <span class="variable" name="deliverable" elementType="String">"Widgets"</span> satisfies the
Acceptance Criteria, and <span class="variable" name="receiver" elementType="org.accordproject.organization@0.2.0.Organization" identifiedBy="identifier">"Party B"</span> notifies <span class="variable" name="shipper" elementType="org.accordproject.organization@0.2.0.Organization" identifiedBy="identifier">"Party A"</span> in writing
that it is accepting the <span class="variable" name="deliverable" elementType="String">"Widgets"</span>.</p>
<h2>Inspection and Notice.</h2>
<p><span class="variable" name="receiver" elementType="org.accordproject.organization@0.2.0.Organization" identifiedBy="identifier">"Party B"</span> will have <span class="variable" name="businessDays" elementType="Long">10</span> Business Days to inspect and
evaluate the <span class="variable" name="deliverable" elementType="String">"Widgets"</span> on the delivery date before notifying
<span class="variable" name="shipper" elementType="org.accordproject.organization@0.2.0.Organization" identifiedBy="identifier">"Party A"</span> that it is either accepting or rejecting the
<span class="variable" name="deliverable" elementType="String">"Widgets"</span>.</p>
<h2>Acceptance Criteria.</h2>
<p>The "Acceptance Criteria" are the specifications the <span class="variable" name="deliverable" elementType="String">"Widgets"</span>
must meet for the <span class="variable" name="shipper" elementType="org.accordproject.organization@0.2.0.Organization" identifiedBy="identifier">"Party A"</span> to comply with its requirements and
obligations under this agreement, detailed in <span class="variable" name="attachment" elementType="String">"Attachment X"</span>, attached
to this agreement.</p>
</div>
<p>More text</p>
</div>
</body>
</html>"
`;

exports[`ciceromark <-> html converts acceptance.json to and from CiceroMark 2`] = `
"<html>
<head><meta charset="UTF-8"></head>
<body>
<div class="document">
<h1>Heading</h1>
<p>And below is a <strong>clause</strong>.</p>
<div class="clause" name="deliveryClause" elementType="org.accordproject.acceptanceofdelivery@1.0.0.AcceptanceOfDeliveryClause">
<h2>Acceptance of Delivery.</h2>
<p><span class="variable" name="shipper" elementType="org.accordproject.organization@0.2.0.Organization" identifiedBy="identifier">"Party A"</span> will be deemed to have completed its delivery obligations
if in <span class="variable" name="receiver" elementType="org.accordproject.organization@0.2.0.Organization" identifiedBy="identifier">"Party B"</span>'s opinion, the <span class="variable" name="deliverable" elementType="String">"Widgets"</span> satisfies the
Acceptance Criteria, and <span class="variable" name="receiver" elementType="org.accordproject.organization@0.2.0.Organization" identifiedBy="identifier">"Party B"</span> notifies <span class="variable" name="shipper" elementType="org.accordproject.organization@0.2.0.Organization" identifiedBy="identifier">"Party A"</span> in writing
that it is accepting the <span class="variable" name="deliverable" elementType="String">"Widgets"</span>.</p>
<h2>Inspection and Notice.</h2>
<p><span class="variable" name="receiver" elementType="org.accordproject.organization@0.2.0.Organization" identifiedBy="identifier">"Party B"</span> will have <span class="variable" name="businessDays" elementType="Long">10</span> Business Days to inspect and
evaluate the <span class="variable" name="deliverable" elementType="String">"Widgets"</span> on the delivery date before notifying
<span class="variable" name="shipper" elementType="org.accordproject.organization@0.2.0.Organization" identifiedBy="identifier">"Party A"</span> that it is either accepting or rejecting the
<span class="variable" name="deliverable" elementType="String">"Widgets"</span>.</p>
<h2>Acceptance Criteria.</h2>
<p>The "Acceptance Criteria" are the specifications the <span class="variable" name="deliverable" elementType="String">"Widgets"</span>
must meet for the <span class="variable" name="shipper" elementType="org.accordproject.organization@0.2.0.Organization" identifiedBy="identifier">"Party A"</span> to comply with its requirements and
obligations under this agreement, detailed in <span class="variable" name="attachment" elementType="String">"Attachment X"</span>, attached
to this agreement.</p>
</div>
<p>More text</p>
</div>
</body>
</html>"
`;

exports[`ciceromark <-> html converts acceptance.json to and from CiceroMark 3`] = `
{
  "$class": "org.accordproject.commonmark@0.5.0.Document",
  "nodes": [
    {
      "$class": "org.accordproject.commonmark@0.5.0.Heading",
      "level": "1",
      "nodes": [
        {
          "$class": "org.accordproject.commonmark@0.5.0.Text",
          "text": "Heading",
        },
      ],
    },
    {
      "$class": "org.accordproject.commonmark@0.5.0.Paragraph",
      "nodes": [
        {
          "$class": "org.accordproject.commonmark@0.5.0.Text",
          "text": "And below is a ",
        },
        {
          "$class": "org.accordproject.commonmark@0.5.0.Strong",
          "nodes": [
            {
              "$class": "org.accordproject.commonmark@0.5.0.Text",
              "text": "clause",
            },
          ],
        },
        {
          "$class": "org.accordproject.commonmark@0.5.0.Text",
          "text": ".",
        },
      ],
    },
    {
      "$class": "org.accordproject.ciceromark@0.6.0.Clause",
      "elementType": "org.accordproject.acceptanceofdelivery@1.0.0.AcceptanceOfDeliveryClause",
      "name": "deliveryClause",
      "nodes": [
        {
          "$class": "org.accordproject.commonmark@0.5.0.Heading",
          "level": "2",
          "nodes": [
            {
              "$class": "org.accordproject.commonmark@0.5.0.Text",
              "text": "Acceptance of Delivery.",
            },
          ],
        },
        {
          "$class": "org.accordproject.commonmark@0.5.0.Paragraph",
          "nodes": [
            {
              "$class": "org.accordproject.ciceromark@0.6.0.Variable",
              "elementType": "org.accordproject.organization@0.2.0.Organization",
              "identifiedBy": "identifier",
              "name": "shipper",
              "value": ""Party A"",
            },
            {
              "$class": "org.accordproject.commonmark@0.5.0.Text",
              "text": " will be deemed to have completed its delivery obligations",
            },
            {
              "$class": "org.accordproject.commonmark@0.5.0.Softbreak",
            },
            {
              "$class": "org.accordproject.commonmark@0.5.0.Text",
              "text": "if in ",
            },
            {
              "$class": "org.accordproject.ciceromark@0.6.0.Variable",
              "elementType": "org.accordproject.organization@0.2.0.Organization",
              "identifiedBy": "identifier",
              "name": "receiver",
              "value": ""Party B"",
            },
            {
              "$class": "org.accordproject.commonmark@0.5.0.Text",
              "text": "'s opinion, the ",
            },
            {
              "$class": "org.accordproject.ciceromark@0.6.0.Variable",
              "elementType": "String",
              "name": "deliverable",
              "value": ""Widgets"",
            },
            {
              "$class": "org.accordproject.commonmark@0.5.0.Text",
              "text": " satisfies the",
            },
            {
              "$class": "org.accordproject.commonmark@0.5.0.Softbreak",
            },
            {
              "$class": "org.accordproject.commonmark@0.5.0.Text",
              "text": "Acceptance Criteria, and ",
            },
            {
              "$class": "org.accordproject.ciceromark@0.6.0.Variable",
              "elementType": "org.accordproject.organization@0.2.0.Organization",
              "identifiedBy": "identifier",
              "name": "receiver",
              "value": ""Party B"",
            },
            {
              "$class": "org.accordproject.commonmark@0.5.0.Text",
              "text": " notifies ",
            },
            {
              "$class": "org.accordproject.ciceromark@0.6.0.Variable",
              "elementType": "org.accordproject.organization@0.2.0.Organization",
              "identifiedBy": "identifier",
              "name": "shipper",
              "value": ""Party A"",
            },
            {
              "$class": "org.accordproject.commonmark@0.5.0.Text",
              "text": " in writing",
            },
            {
              "$class": "org.accordproject.commonmark@0.5.0.Softbreak",
            },
            {
              "$class": "org.accordproject.commonmark@0.5.0.Text",
              "text": "that it is accepting the ",
            },
            {
              "$class": "org.accordproject.ciceromark@0.6.0.Variable",
              "elementType": "String",
              "name": "deliverable",
              "value": ""Widgets"",
            },
            {
              "$class": "org.accordproject.commonmark@0.5.0.Text",
              "text": ".",
            },
          ],
        },
        {
          "$class": "org.accordproject.commonmark@0.5.0.Heading",
          "level": "2",
          "nodes": [
            {
              "$class": "org.accordproject.commonmark@0.5.0.Text",
              "text": "Inspection and Notice.",
            },
          ],
        },
        {
          "$class": "org.accordproject.commonmark@0.5.0.Paragraph",
          "nodes": [
            {
              "$class": "org.accordproject.ciceromark@0.6.0.Variable",
              "elementType": "org.accordproject.organization@0.2.0.Organization",
              "identifiedBy": "identifier",
              "name": "receiver",
              "value": ""Party B"",
            },
            {
              "$class": "org.accordproject.commonmark@0.5.0.Text",
              "text": " will have ",
            },
            {
              "$class": "org.accordproject.ciceromark@0.6.0.Variable",
              "elementType": "Long",
              "name": "businessDays",
              "value": "10",
            },
            {
              "$class": "org.accordproject.commonmark@0.5.0.Text",
              "text": " Business Days to inspect and",
            },
            {
              "$class": "org.accordproject.commonmark@0.5.0.Softbreak",
            },
            {
              "$class": "org.accordproject.commonmark@0.5.0.Text",
              "text": "evaluate the ",
            },
            {
              "$class": "org.accordproject.ciceromark@0.6.0.Variable",
              "elementType": "String",
              "name": "deliverable",
              "value": ""Widgets"",
            },
            {
              "$class": "org.accordproject.commonmark@0.5.0.Text",
              "text": " on the delivery date before notifying",
            },
            {
              "$class": "org.accordproject.commonmark@0.5.0.Softbreak",
            },
            {
              "$class": "org.accordproject.ciceromark@0.6.0.Variable",
              "elementType": "org.accordproject.organization@0.2.0.Organization",
              "identifiedBy": "identifier",
              "name": "shipper",
              "value": ""Party A"",
            },
            {
              "$class": "org.accordproject.commonmark@0.5.0.Text",
              "text": " that it is either accepting or rejecting the",
            },
            {
              "$class": "org.accordproject.commonmark@0.5.0.Softbreak",
            },
            {
              "$class": "org.accordproject.ciceromark@0.6.0.Variable",
              "elementType": "String",
              "name": "deliverable",
              "value": ""Widgets"",
            },
            {
              "$class": "org.accordproject.commonmark@0.5.0.Text",
              "text": ".",
            },
          ],
        },
        {
          "$class": "org.accordproject.commonmark@0.5.0.Heading",
          "level": "2",
          "nodes": [
            {
              "$class": "org.accordproject.commonmark@0.5.0.Text",
              "text": "Acceptance Criteria.",
            },
          ],
        },
        {
          "$class": "org.accordproject.commonmark@0.5.0.Paragraph",
          "nodes": [
            {
              "$class": "org.accordproject.commonmark@0.5.0.Text",
              "text": "The "Acceptance Criteria" are the specifications the ",
            },
            {
              "$class": "org.accordproject.ciceromark@0.6.0.Variable",
              "elementType": "String",
              "name": "deliverable",
              "value": ""Widgets"",
            },
            {
              "$class": "org.accordproject.commonmark@0.5.0.Softbreak",
            },
            {
              "$class": "org.accordproject.commonmark@0.5.0.Text",
              "text": "must meet for the ",
            },
            {
              "$class": "org.accordproject.ciceromark@0.6.0.Variable",
              "elementType": "org.accordproject.organization@0.2.0.Organization",
              "identifiedBy": "identifier",
              "name": "shipper",
              "value": ""Party A"",
            },
            {
              "$class": "org.accordproject.commonmark@0.5.0.Text",
              "text": " to comply with its requirements and",
            },
            {
              "$class": "org.accordproject.commonmark@0.5.0.Softbreak",
            },
            {
              "$class": "org.accordproject.commonmark@0.5.0.Text",
              "text": "obligations under this agreement, detailed in ",
            },
            {
              "$class": "org.accordproject.ciceromark@0.6.0.Variable",
              "elementType": "String",
              "name": "attachment",
              "value": ""Attachment X"",
            },
            {
              "$class": "org.accordproject.commonmark@0.5.0.Text",
              "text": ", attached",
            },
            {
              "$class": "org.accordproject.commonmark@0.5.0.Softbreak",
            },
            {
              "$class": "org.accordproject.commonmark@0.5.0.Text",
              "text": "to this agreement.",
            },
          ],
        },
      ],
    },
    {
      "$class": "org.accordproject.commonmark@0.5.0.Paragraph",
      "nodes": [
        {
          "$class": "org.accordproject.commonmark@0.5.0.Text",
          "text": "More text",
        },
      ],
    },
  ],
  "xmlns": "http://commonmark.org/xml/1.0",
}
`;

exports[`ciceromark <-> html converts fixedinterest.json to and from CiceroMark 1`] = `
"<html>
<head><meta charset="UTF-8"></head>
<body>
<div class="document">
<h2>Fixed rate loan</h2>
<p>This is a <em>fixed interest</em> loan to the amount of <span class="variable" name="loanAmount" format="K0,0.00" elementType="org.accordproject.money.MonetaryAmount">£100,000.00</span>
at the yearly interest rate of <span class="variable" name="rate" elementType="Double">2.5</span>%
with a loan term of <span class="variable" name="loanDuration" elementType="Integer">15</span>,
and monthly payments of <span class="formula" name="formula" code="%20monthlyPaymentFormula(loanAmount%2Crate%2CloanDuration)%20as%20%22K0%2C0.00%22%20" dependencies="%5B%5D"> eval( monthlyPaymentFormula(loanAmount,rate,loanDuration) as "K0,0.00" ) </span></p>
</div>
</body>
</html>"
`;

exports[`ciceromark <-> html converts fixedinterest.json to and from CiceroMark 2`] = `
"<html>
<head><meta charset="UTF-8"></head>
<body>
<div class="document">
<h2>Fixed rate loan</h2>
<p>This is a <em>fixed interest</em> loan to the amount of <span class="variable" name="loanAmount" format="K0,0.00" elementType="org.accordproject.money.MonetaryAmount">£100,000.00</span>
at the yearly interest rate of <span class="variable" name="rate" elementType="Double">2.5</span>%
with a loan term of <span class="variable" name="loanDuration" elementType="Integer">15</span>,
and monthly payments of <span class="formula" name="formula" code="%20monthlyPaymentFormula(loanAmount%2Crate%2CloanDuration)%20as%20%22K0%2C0.00%22%20" dependencies="%5B%5D"> eval( monthlyPaymentFormula(loanAmount,rate,loanDuration) as "K0,0.00" ) </span></p>
</div>
</body>
</html>"
`;

exports[`ciceromark <-> html converts fixedinterest.json to and from CiceroMark 3`] = `
{
  "$class": "org.accordproject.commonmark@0.5.0.Document",
  "nodes": [
    {
      "$class": "org.accordproject.commonmark@0.5.0.Heading",
      "level": "2",
      "nodes": [
        {
          "$class": "org.accordproject.commonmark@0.5.0.Text",
          "text": "Fixed rate loan",
        },
      ],
    },
    {
      "$class": "org.accordproject.commonmark@0.5.0.Paragraph",
      "nodes": [
        {
          "$class": "org.accordproject.commonmark@0.5.0.Text",
          "text": "This is a ",
        },
        {
          "$class": "org.accordproject.commonmark@0.5.0.Emph",
          "nodes": [
            {
              "$class": "org.accordproject.commonmark@0.5.0.Text",
              "text": "fixed interest",
            },
          ],
        },
        {
          "$class": "org.accordproject.commonmark@0.5.0.Text",
          "text": " loan to the amount of ",
        },
        {
          "$class": "org.accordproject.ciceromark@0.6.0.FormattedVariable",
          "elementType": "org.accordproject.money.MonetaryAmount",
          "format": "K0,0.00",
          "name": "loanAmount",
          "value": "£100,000.00",
        },
        {
          "$class": "org.accordproject.commonmark@0.5.0.Softbreak",
        },
        {
          "$class": "org.accordproject.commonmark@0.5.0.Text",
          "text": "at the yearly interest rate of ",
        },
        {
          "$class": "org.accordproject.ciceromark@0.6.0.Variable",
          "elementType": "Double",
          "name": "rate",
          "value": "2.5",
        },
        {
          "$class": "org.accordproject.commonmark@0.5.0.Text",
          "text": "%",
        },
        {
          "$class": "org.accordproject.commonmark@0.5.0.Softbreak",
        },
        {
          "$class": "org.accordproject.commonmark@0.5.0.Text",
          "text": "with a loan term of ",
        },
        {
          "$class": "org.accordproject.ciceromark@0.6.0.Variable",
          "elementType": "Integer",
          "name": "loanDuration",
          "value": "15",
        },
        {
          "$class": "org.accordproject.commonmark@0.5.0.Text",
          "text": ",",
        },
        {
          "$class": "org.accordproject.commonmark@0.5.0.Softbreak",
        },
        {
          "$class": "org.accordproject.commonmark@0.5.0.Text",
          "text": "and monthly payments of ",
        },
        {
          "$class": "org.accordproject.ciceromark@0.6.0.Formula",
          "code": " monthlyPaymentFormula(loanAmount,rate,loanDuration) as "K0,0.00" ",
          "dependencies": [],
          "name": "formula",
          "value": " eval( monthlyPaymentFormula(loanAmount,rate,loanDuration) as "K0,0.00" ) ",
        },
      ],
    },
  ],
  "xmlns": "http://commonmark.org/xml/1.0",
}
`;

exports[`ciceromark <-> html converts latedelivery.json to and from CiceroMark 1`] = `
"<html>
<head><meta charset="UTF-8"></head>
<body>
<div class="document">
<h2>Late Delivery and Penalty.</h2>
<p>In case of delayed delivery<span class="conditional" name="forceMajeure" whenTrue=" except for Force Majeure cases," whenFalse=""> except for Force Majeure cases,</span><span class="variable" name="partyId" elementType="String">"Dan"</span> (the Seller) shall pay to <span class="variable" name="partyId" elementType="String">"Steve"</span> (the Buyer) for every <span class="variable" name="amount" elementType="Long">2</span> <span class="variable" name="unit" enumValues="%5B%22seconds%22%2C%22minutes%22%2C%22hours%22%2C%22days%22%2C%22weeks%22%5D" elementType="org.accordproject.time.TemporalUnit">days</span>
of delay penalty amounting to <span class="variable" name="penaltyPercentage" elementType="Double">10.5</span>% of the total value of the Equipment
whose delivery has been delayed. Any fractional part of a <span class="variable" name="fractionalPart" enumValues="%5B%22seconds%22%2C%22minutes%22%2C%22hours%22%2C%22days%22%2C%22weeks%22%5D" elementType="org.accordproject.time.TemporalUnit">days</span> is to be
considered a full <span class="variable" name="fractionalPart" enumValues="%5B%22seconds%22%2C%22minutes%22%2C%22hours%22%2C%22days%22%2C%22weeks%22%5D" elementType="org.accordproject.time.TemporalUnit">days</span>. The total amount of penalty shall not however,
exceed <span class="variable" name="capPercentage" elementType="Double">55.0</span>% of the total value of the Equipment involved in late delivery.
If the delay is more than <span class="variable" name="amount" elementType="Long">15</span> <span class="variable" name="unit" enumValues="%5B%22seconds%22%2C%22minutes%22%2C%22hours%22%2C%22days%22%2C%22weeks%22%5D" elementType="org.accordproject.time.TemporalUnit">days</span>, the Buyer is entitled to terminate this Contract.</p>
</div>
</body>
</html>"
`;

exports[`ciceromark <-> html converts latedelivery.json to and from CiceroMark 2`] = `
"<html>
<head><meta charset="UTF-8"></head>
<body>
<div class="document">
<h2>Late Delivery and Penalty.</h2>
<p>In case of delayed delivery<span class="conditional" name="forceMajeure" whenTrue=" except for Force Majeure cases," whenFalse=""> except for Force Majeure cases,</span><span class="variable" name="partyId" elementType="String">"Dan"</span> (the Seller) shall pay to <span class="variable" name="partyId" elementType="String">"Steve"</span> (the Buyer) for every <span class="variable" name="amount" elementType="Long">2</span> <span class="variable" name="unit" enumValues="%5B%22seconds%22%2C%22minutes%22%2C%22hours%22%2C%22days%22%2C%22weeks%22%5D" elementType="org.accordproject.time.TemporalUnit">days</span>
of delay penalty amounting to <span class="variable" name="penaltyPercentage" elementType="Double">10.5</span>% of the total value of the Equipment
whose delivery has been delayed. Any fractional part of a <span class="variable" name="fractionalPart" enumValues="%5B%22seconds%22%2C%22minutes%22%2C%22hours%22%2C%22days%22%2C%22weeks%22%5D" elementType="org.accordproject.time.TemporalUnit">days</span> is to be
considered a full <span class="variable" name="fractionalPart" enumValues="%5B%22seconds%22%2C%22minutes%22%2C%22hours%22%2C%22days%22%2C%22weeks%22%5D" elementType="org.accordproject.time.TemporalUnit">days</span>. The total amount of penalty shall not however,
exceed <span class="variable" name="capPercentage" elementType="Double">55.0</span>% of the total value of the Equipment involved in late delivery.
If the delay is more than <span class="variable" name="amount" elementType="Long">15</span> <span class="variable" name="unit" enumValues="%5B%22seconds%22%2C%22minutes%22%2C%22hours%22%2C%22days%22%2C%22weeks%22%5D" elementType="org.accordproject.time.TemporalUnit">days</span>, the Buyer is entitled to terminate this Contract.</p>
</div>
</body>
</html>"
`;

exports[`ciceromark <-> html converts latedelivery.json to and from CiceroMark 3`] = `
{
  "$class": "org.accordproject.commonmark@0.5.0.Document",
  "nodes": [
    {
      "$class": "org.accordproject.commonmark@0.5.0.Heading",
      "level": "2",
      "nodes": [
        {
          "$class": "org.accordproject.commonmark@0.5.0.Text",
          "text": "Late Delivery and Penalty.",
        },
      ],
    },
    {
      "$class": "org.accordproject.commonmark@0.5.0.Paragraph",
      "nodes": [
        {
          "$class": "org.accordproject.commonmark@0.5.0.Text",
          "text": "In case of delayed delivery",
        },
        {
          "$class": "org.accordproject.ciceromark@0.6.0.Conditional",
          "isTrue": true,
          "name": "forceMajeure",
          "nodes": [
            {
              "$class": "org.accordproject.commonmark@0.5.0.Text",
              "text": " except for Force Majeure cases,",
            },
          ],
          "whenFalse": [],
          "whenTrue": [
            {
              "$class": "org.accordproject.commonmark@0.5.0.Text",
              "text": " except for Force Majeure cases,",
            },
          ],
        },
        {
          "$class": "org.accordproject.ciceromark@0.6.0.Variable",
          "elementType": "String",
          "name": "partyId",
          "value": ""Dan"",
        },
        {
          "$class": "org.accordproject.commonmark@0.5.0.Text",
          "text": " (the Seller) shall pay to ",
        },
        {
          "$class": "org.accordproject.ciceromark@0.6.0.Variable",
          "elementType": "String",
          "name": "partyId",
          "value": ""Steve"",
        },
        {
          "$class": "org.accordproject.commonmark@0.5.0.Text",
          "text": " (the Buyer) for every ",
        },
        {
          "$class": "org.accordproject.ciceromark@0.6.0.Variable",
          "elementType": "Long",
          "name": "amount",
          "value": "2",
        },
        {
          "$class": "org.accordproject.commonmark@0.5.0.Text",
          "text": " ",
        },
        {
          "$class": "org.accordproject.ciceromark@0.6.0.EnumVariable",
          "elementType": "org.accordproject.time.TemporalUnit",
          "enumValues": [
            "seconds",
            "minutes",
            "hours",
            "days",
            "weeks",
          ],
          "name": "unit",
          "value": "days",
        },
        {
          "$class": "org.accordproject.commonmark@0.5.0.Softbreak",
        },
        {
          "$class": "org.accordproject.commonmark@0.5.0.Text",
          "text": "of delay penalty amounting to ",
        },
        {
          "$class": "org.accordproject.ciceromark@0.6.0.Variable",
          "elementType": "Double",
          "name": "penaltyPercentage",
          "value": "10.5",
        },
        {
          "$class": "org.accordproject.commonmark@0.5.0.Text",
          "text": "% of the total value of the Equipment",
        },
        {
          "$class": "org.accordproject.commonmark@0.5.0.Softbreak",
        },
        {
          "$class": "org.accordproject.commonmark@0.5.0.Text",
          "text": "whose delivery has been delayed. Any fractional part of a ",
        },
        {
          "$class": "org.accordproject.ciceromark@0.6.0.EnumVariable",
          "elementType": "org.accordproject.time.TemporalUnit",
          "enumValues": [
            "seconds",
            "minutes",
            "hours",
            "days",
            "weeks",
          ],
          "name": "fractionalPart",
          "value": "days",
        },
        {
          "$class": "org.accordproject.commonmark@0.5.0.Text",
          "text": " is to be",
        },
        {
          "$class": "org.accordproject.commonmark@0.5.0.Softbreak",
        },
        {
          "$class": "org.accordproject.commonmark@0.5.0.Text",
          "text": "considered a full ",
        },
        {
          "$class": "org.accordproject.ciceromark@0.6.0.EnumVariable",
          "elementType": "org.accordproject.time.TemporalUnit",
          "enumValues": [
            "seconds",
            "minutes",
            "hours",
            "days",
            "weeks",
          ],
          "name": "fractionalPart",
          "value": "days",
        },
        {
          "$class": "org.accordproject.commonmark@0.5.0.Text",
          "text": ". The total amount of penalty shall not however,",
        },
        {
          "$class": "org.accordproject.commonmark@0.5.0.Softbreak",
        },
        {
          "$class": "org.accordproject.commonmark@0.5.0.Text",
          "text": "exceed ",
        },
        {
          "$class": "org.accordproject.ciceromark@0.6.0.Variable",
          "elementType": "Double",
          "name": "capPercentage",
          "value": "55.0",
        },
        {
          "$class": "org.accordproject.commonmark@0.5.0.Text",
          "text": "% of the total value of the Equipment involved in late delivery.",
        },
        {
          "$class": "org.accordproject.commonmark@0.5.0.Softbreak",
        },
        {
          "$class": "org.accordproject.commonmark@0.5.0.Text",
          "text": "If the delay is more than ",
        },
        {
          "$class": "org.accordproject.ciceromark@0.6.0.Variable",
          "elementType": "Long",
          "name": "amount",
          "value": "15",
        },
        {
          "$class": "org.accordproject.commonmark@0.5.0.Text",
          "text": " ",
        },
        {
          "$class": "org.accordproject.ciceromark@0.6.0.EnumVariable",
          "elementType": "org.accordproject.time.TemporalUnit",
          "enumValues": [
            "seconds",
            "minutes",
            "hours",
            "days",
            "weeks",
          ],
          "name": "unit",
          "value": "days",
        },
        {
          "$class": "org.accordproject.commonmark@0.5.0.Text",
          "text": ", the Buyer is entitled to terminate this Contract.",
        },
      ],
    },
  ],
  "xmlns": "http://commonmark.org/xml/1.0",
}
`;

exports[`markdown <-> html converts blockquote.md to html 1`] = `
{
  "$class": "org.accordproject.commonmark@0.5.0.Document",
  "nodes": [
    {
      "$class": "org.accordproject.commonmark@0.5.0.Paragraph",
      "nodes": [
        {
          "$class": "org.accordproject.commonmark@0.5.0.Text",
          "text": "This is",
        },
      ],
    },
    {
      "$class": "org.accordproject.commonmark@0.5.0.BlockQuote",
      "nodes": [
        {
          "$class": "org.accordproject.commonmark@0.5.0.Paragraph",
          "nodes": [
            {
              "$class": "org.accordproject.commonmark@0.5.0.Text",
              "text": "A quote.",
            },
          ],
        },
      ],
    },
  ],
  "xmlns": "http://commonmark.org/xml/1.0",
}
`;

exports[`markdown <-> html converts blockquote.md to html 2`] = `
"<html>
<head><meta charset="UTF-8"></head>
<body>
<div class="document">
<p>This is</p>
<blockquote><p>A quote.</p>
</blockquote>
</div>
</body>
</html>"
`;

exports[`markdown <-> html converts codeblock.md to html 1`] = `
{
  "$class": "org.accordproject.commonmark@0.5.0.Document",
  "nodes": [
    {
      "$class": "org.accordproject.commonmark@0.5.0.CodeBlock",
      "text": "this is a multiline
code
block.
",
    },
  ],
  "xmlns": "http://commonmark.org/xml/1.0",
}
`;

exports[`markdown <-> html converts codeblock.md to html 2`] = `
"<html>
<head><meta charset="UTF-8"></head>
<body>
<div class="document">
<pre class="code_block"><code>this is a multiline
code
block.
</pre></code>
</div>
</body>
</html>"
`;

exports[`markdown <-> html converts codeblock-info.md to html 1`] = `
{
  "$class": "org.accordproject.commonmark@0.5.0.Document",
  "nodes": [
    {
      "$class": "org.accordproject.commonmark@0.5.0.CodeBlock",
      "info": "<video src="https://www.youtube.com/embed/dQw4w9WgXcQ"/>",
      "tag": {
        "$class": "org.accordproject.commonmark@0.5.0.TagInfo",
        "attributeString": "src = "https://www.youtube.com/embed/dQw4w9WgXcQ" ",
        "attributes": [
          {
            "$class": "org.accordproject.commonmark@0.5.0.Attribute",
            "name": "src",
            "value": "https://www.youtube.com/embed/dQw4w9WgXcQ",
          },
        ],
        "closed": true,
        "content": "",
        "tagName": "video",
      },
      "text": "  this is a multiline
  code

  containing a newline

  which should be handled by the video plugin.
",
    },
  ],
  "xmlns": "http://commonmark.org/xml/1.0",
}
`;

exports[`markdown <-> html converts codeblock-info.md to html 2`] = `
"<html>
<head><meta charset="UTF-8"></head>
<body>
<div class="document">
<pre class="code_block"><code data-ciceromark="%3Cvideo%20src%3D%22https%3A%2F%2Fwww.youtube.com%2Fembed%2FdQw4w9WgXcQ%22%2F%3E">  this is a multiline
  code

  containing a newline

  which should be handled by the video plugin.
</pre></code>
</div>
</body>
</html>"
`;

exports[`markdown <-> html converts emph.md to html 1`] = `
{
  "$class": "org.accordproject.commonmark@0.5.0.Document",
  "nodes": [
    {
      "$class": "org.accordproject.commonmark@0.5.0.Paragraph",
      "nodes": [
        {
          "$class": "org.accordproject.commonmark@0.5.0.Text",
          "text": "This is ",
        },
        {
          "$class": "org.accordproject.commonmark@0.5.0.Emph",
          "nodes": [
            {
              "$class": "org.accordproject.commonmark@0.5.0.Text",
              "text": "some",
            },
          ],
        },
        {
          "$class": "org.accordproject.commonmark@0.5.0.Text",
          "text": " text.",
        },
      ],
    },
  ],
  "xmlns": "http://commonmark.org/xml/1.0",
}
`;

exports[`markdown <-> html converts emph.md to html 2`] = `
"<html>
<head><meta charset="UTF-8"></head>
<body>
<div class="document">
<p>This is <em>some</em> text.</p>
</div>
</body>
</html>"
`;

exports[`markdown <-> html converts emph-strong.md to html 1`] = `
{
  "$class": "org.accordproject.commonmark@0.5.0.Document",
  "nodes": [
    {
      "$class": "org.accordproject.commonmark@0.5.0.Paragraph",
      "nodes": [
        {
          "$class": "org.accordproject.commonmark@0.5.0.Text",
          "text": "This is ",
        },
        {
          "$class": "org.accordproject.commonmark@0.5.0.Emph",
          "nodes": [
            {
              "$class": "org.accordproject.commonmark@0.5.0.Strong",
              "nodes": [
                {
                  "$class": "org.accordproject.commonmark@0.5.0.Text",
                  "text": "some",
                },
              ],
            },
          ],
        },
        {
          "$class": "org.accordproject.commonmark@0.5.0.Text",
          "text": " text.",
        },
      ],
    },
  ],
  "xmlns": "http://commonmark.org/xml/1.0",
}
`;

exports[`markdown <-> html converts emph-strong.md to html 2`] = `
"<html>
<head><meta charset="UTF-8"></head>
<body>
<div class="document">
<p>This is <em><strong>some</strong></em> text.</p>
</div>
</body>
</html>"
`;

exports[`markdown <-> html converts h1.md to html 1`] = `
{
  "$class": "org.accordproject.commonmark@0.5.0.Document",
  "nodes": [
    {
      "$class": "org.accordproject.commonmark@0.5.0.Heading",
      "level": "1",
      "nodes": [
        {
          "$class": "org.accordproject.commonmark@0.5.0.Text",
          "text": "Heading One",
        },
      ],
    },
  ],
  "xmlns": "http://commonmark.org/xml/1.0",
}
`;

exports[`markdown <-> html converts h1.md to html 2`] = `
"<html>
<head><meta charset="UTF-8"></head>
<body>
<div class="document">
<h1>Heading One</h1>
</div>
</body>
</html>"
`;

exports[`markdown <-> html converts h2.md to html 1`] = `
{
  "$class": "org.accordproject.commonmark@0.5.0.Document",
  "nodes": [
    {
      "$class": "org.accordproject.commonmark@0.5.0.Heading",
      "level": "2",
      "nodes": [
        {
          "$class": "org.accordproject.commonmark@0.5.0.Text",
          "text": "Heading Two",
        },
      ],
    },
  ],
  "xmlns": "http://commonmark.org/xml/1.0",
}
`;

exports[`markdown <-> html converts h2.md to html 2`] = `
"<html>
<head><meta charset="UTF-8"></head>
<body>
<div class="document">
<h2>Heading Two</h2>
</div>
</body>
</html>"
`;

exports[`markdown <-> html converts h3.md to html 1`] = `
{
  "$class": "org.accordproject.commonmark@0.5.0.Document",
  "nodes": [
    {
      "$class": "org.accordproject.commonmark@0.5.0.Heading",
      "level": "3",
      "nodes": [
        {
          "$class": "org.accordproject.commonmark@0.5.0.Text",
          "text": "Heading Three",
        },
      ],
    },
  ],
  "xmlns": "http://commonmark.org/xml/1.0",
}
`;

exports[`markdown <-> html converts h3.md to html 2`] = `
"<html>
<head><meta charset="UTF-8"></head>
<body>
<div class="document">
<h3>Heading Three</h3>
</div>
</body>
</html>"
`;

exports[`markdown <-> html converts h4.md to html 1`] = `
{
  "$class": "org.accordproject.commonmark@0.5.0.Document",
  "nodes": [
    {
      "$class": "org.accordproject.commonmark@0.5.0.Heading",
      "level": "4",
      "nodes": [
        {
          "$class": "org.accordproject.commonmark@0.5.0.Text",
          "text": "Heading Four",
        },
      ],
    },
  ],
  "xmlns": "http://commonmark.org/xml/1.0",
}
`;

exports[`markdown <-> html converts h4.md to html 2`] = `
"<html>
<head><meta charset="UTF-8"></head>
<body>
<div class="document">
<h4>Heading Four</h4>
</div>
</body>
</html>"
`;

exports[`markdown <-> html converts h5.md to html 1`] = `
{
  "$class": "org.accordproject.commonmark@0.5.0.Document",
  "nodes": [
    {
      "$class": "org.accordproject.commonmark@0.5.0.Heading",
      "level": "5",
      "nodes": [
        {
          "$class": "org.accordproject.commonmark@0.5.0.Text",
          "text": "Heading Five",
        },
      ],
    },
  ],
  "xmlns": "http://commonmark.org/xml/1.0",
}
`;

exports[`markdown <-> html converts h5.md to html 2`] = `
"<html>
<head><meta charset="UTF-8"></head>
<body>
<div class="document">
<h5>Heading Five</h5>
</div>
</body>
</html>"
`;

exports[`markdown <-> html converts h6.md to html 1`] = `
{
  "$class": "org.accordproject.commonmark@0.5.0.Document",
  "nodes": [
    {
      "$class": "org.accordproject.commonmark@0.5.0.Heading",
      "level": "6",
      "nodes": [
        {
          "$class": "org.accordproject.commonmark@0.5.0.Text",
          "text": "Heading Six",
        },
      ],
    },
  ],
  "xmlns": "http://commonmark.org/xml/1.0",
}
`;

exports[`markdown <-> html converts h6.md to html 2`] = `
"<html>
<head><meta charset="UTF-8"></head>
<body>
<div class="document">
<h6>Heading Six</h6>
</div>
</body>
</html>"
`;

exports[`markdown <-> html converts html-inline.md to html 1`] = `
{
  "$class": "org.accordproject.commonmark@0.5.0.Document",
  "nodes": [
    {
      "$class": "org.accordproject.commonmark@0.5.0.Paragraph",
      "nodes": [
        {
          "$class": "org.accordproject.commonmark@0.5.0.Text",
          "text": "This is a ",
        },
        {
          "$class": "org.accordproject.commonmark@0.5.0.HtmlInline",
          "tag": {
            "$class": "org.accordproject.commonmark@0.5.0.TagInfo",
            "attributeString": "src = "property" ",
            "attributes": [
              {
                "$class": "org.accordproject.commonmark@0.5.0.Attribute",
                "name": "src",
                "value": "property",
              },
            ],
            "closed": false,
            "content": "",
            "tagName": "custom",
          },
          "text": "<custom src="property"></custom>",
        },
        {
          "$class": "org.accordproject.commonmark@0.5.0.Text",
          "text": " property.",
        },
      ],
    },
  ],
  "xmlns": "http://commonmark.org/xml/1.0",
}
`;

exports[`markdown <-> html converts html-inline.md to html 2`] = `
"<html>
<head><meta charset="UTF-8"></head>
<body>
<div class="document">
<p>This is a <span class="html_inline"><custom src="property"></custom></span> property.</p>
</div>
</body>
</html>"
`;

exports[`markdown <-> html converts html-mixed.md to html 1`] = `
{
  "$class": "org.accordproject.commonmark@0.5.0.Document",
  "nodes": [
    {
      "$class": "org.accordproject.commonmark@0.5.0.Heading",
      "level": "1",
      "nodes": [
        {
          "$class": "org.accordproject.commonmark@0.5.0.Text",
          "text": "Heading One",
        },
      ],
    },
    {
      "$class": "org.accordproject.commonmark@0.5.0.Paragraph",
      "nodes": [
        {
          "$class": "org.accordproject.commonmark@0.5.0.HtmlInline",
          "tag": {
            "$class": "org.accordproject.commonmark@0.5.0.TagInfo",
            "attributeString": "src = "https://www.youtube.com/embed/dQw4w9WgXcQ" ",
            "attributes": [
              {
                "$class": "org.accordproject.commonmark@0.5.0.Attribute",
                "name": "src",
                "value": "https://www.youtube.com/embed/dQw4w9WgXcQ",
              },
            ],
            "closed": false,
            "content": "",
            "tagName": "video",
          },
          "text": "<video src="https://www.youtube.com/embed/dQw4w9WgXcQ"></video>",
        },
      ],
    },
    {
      "$class": "org.accordproject.commonmark@0.5.0.Paragraph",
      "nodes": [
        {
          "$class": "org.accordproject.commonmark@0.5.0.Text",
          "text": "done.",
        },
      ],
    },
  ],
  "xmlns": "http://commonmark.org/xml/1.0",
}
`;

exports[`markdown <-> html converts html-mixed.md to html 2`] = `
"<html>
<head><meta charset="UTF-8"></head>
<body>
<div class="document">
<h1>Heading One</h1>
<p><span class="html_inline"><video src="https://www.youtube.com/embed/dQw4w9WgXcQ"></video></span></p>
<p>done.</p>
</div>
</body>
</html>"
`;

exports[`markdown <-> html converts inline-code.md to html 1`] = `
{
  "$class": "org.accordproject.commonmark@0.5.0.Document",
  "nodes": [
    {
      "$class": "org.accordproject.commonmark@0.5.0.Paragraph",
      "nodes": [
        {
          "$class": "org.accordproject.commonmark@0.5.0.Text",
          "text": "This is ",
        },
        {
          "$class": "org.accordproject.commonmark@0.5.0.Code",
          "text": "inline code",
        },
        {
          "$class": "org.accordproject.commonmark@0.5.0.Text",
          "text": ".",
        },
      ],
    },
  ],
  "xmlns": "http://commonmark.org/xml/1.0",
}
`;

exports[`markdown <-> html converts inline-code.md to html 2`] = `
"<html>
<head><meta charset="UTF-8"></head>
<body>
<div class="document">
<p>This is <code>inline code</code>.</p>
</div>
</body>
</html>"
`;

exports[`markdown <-> html converts linebreak.md to html 1`] = `
{
  "$class": "org.accordproject.commonmark@0.5.0.Document",
  "nodes": [
    {
      "$class": "org.accordproject.commonmark@0.5.0.Paragraph",
      "nodes": [
        {
          "$class": "org.accordproject.commonmark@0.5.0.Text",
          "text": "one",
        },
        {
          "$class": "org.accordproject.commonmark@0.5.0.Linebreak",
        },
        {
          "$class": "org.accordproject.commonmark@0.5.0.Text",
          "text": "two",
        },
        {
          "$class": "org.accordproject.commonmark@0.5.0.Linebreak",
        },
        {
          "$class": "org.accordproject.commonmark@0.5.0.Text",
          "text": "three",
        },
      ],
    },
    {
      "$class": "org.accordproject.commonmark@0.5.0.Paragraph",
      "nodes": [
        {
          "$class": "org.accordproject.commonmark@0.5.0.Text",
          "text": "four",
        },
      ],
    },
  ],
  "xmlns": "http://commonmark.org/xml/1.0",
}
`;

exports[`markdown <-> html converts linebreak.md to html 2`] = `
"<html>
<head><meta charset="UTF-8"></head>
<body>
<div class="document">
<p>one<br>two<br>three</p>
<p>four</p>
</div>
</body>
</html>"
`;

exports[`markdown <-> html converts link.md to html 1`] = `
{
  "$class": "org.accordproject.commonmark@0.5.0.Document",
  "nodes": [
    {
      "$class": "org.accordproject.commonmark@0.5.0.Paragraph",
      "nodes": [
        {
          "$class": "org.accordproject.commonmark@0.5.0.Text",
          "text": "This is ",
        },
        {
          "$class": "org.accordproject.commonmark@0.5.0.Link",
          "destination": "http://clause.io",
          "nodes": [
            {
              "$class": "org.accordproject.commonmark@0.5.0.Text",
              "text": "a link",
            },
          ],
          "title": "",
        },
        {
          "$class": "org.accordproject.commonmark@0.5.0.Text",
          "text": ".",
        },
      ],
    },
  ],
  "xmlns": "http://commonmark.org/xml/1.0",
}
`;

exports[`markdown <-> html converts link.md to html 2`] = `
"<html>
<head><meta charset="UTF-8"></head>
<body>
<div class="document">
<p>This is <a href="http://clause.io" title=>a link</a>.</p>
</div>
</body>
</html>"
`;

exports[`markdown <-> html converts multiline-html-block.md to html 1`] = `
{
  "$class": "org.accordproject.commonmark@0.5.0.Document",
  "nodes": [
    {
      "$class": "org.accordproject.commonmark@0.5.0.Paragraph",
      "nodes": [
        {
          "$class": "org.accordproject.commonmark@0.5.0.Text",
          "text": "This is a custom",
        },
      ],
    },
    {
      "$class": "org.accordproject.commonmark@0.5.0.HtmlBlock",
      "tag": {
        "$class": "org.accordproject.commonmark@0.5.0.TagInfo",
        "attributeString": "src = "property" ",
        "attributes": [
          {
            "$class": "org.accordproject.commonmark@0.5.0.Attribute",
            "name": "src",
            "value": "property",
          },
        ],
        "closed": false,
        "content": "
contents
",
        "tagName": "custom",
      },
      "text": "<custom src="property">
contents
</custom>",
    },
    {
      "$class": "org.accordproject.commonmark@0.5.0.Paragraph",
      "nodes": [
        {
          "$class": "org.accordproject.commonmark@0.5.0.Text",
          "text": "block.",
        },
      ],
    },
  ],
  "xmlns": "http://commonmark.org/xml/1.0",
}
`;

exports[`markdown <-> html converts multiline-html-block.md to html 2`] = `
"<html>
<head><meta charset="UTF-8"></head>
<body>
<div class="document">
<p>This is a custom</p>
<pre class="html_block"><code><custom src="property">
contents
</custom></pre></code>
<p>block.</p>
</div>
</body>
</html>"
`;

exports[`markdown <-> html converts ol.md to html 1`] = `
{
  "$class": "org.accordproject.commonmark@0.5.0.Document",
  "nodes": [
    {
      "$class": "org.accordproject.commonmark@0.5.0.Paragraph",
      "nodes": [
        {
          "$class": "org.accordproject.commonmark@0.5.0.Text",
          "text": "This is an ordered list:",
        },
      ],
    },
    {
      "$class": "org.accordproject.commonmark@0.5.0.List",
      "delimiter": "period",
      "nodes": [
        {
          "$class": "org.accordproject.commonmark@0.5.0.Item",
          "nodes": [
            {
              "$class": "org.accordproject.commonmark@0.5.0.Paragraph",
              "nodes": [
                {
                  "$class": "org.accordproject.commonmark@0.5.0.Text",
                  "text": "one",
                },
              ],
            },
          ],
        },
        {
          "$class": "org.accordproject.commonmark@0.5.0.Item",
          "nodes": [
            {
              "$class": "org.accordproject.commonmark@0.5.0.Paragraph",
              "nodes": [
                {
                  "$class": "org.accordproject.commonmark@0.5.0.Text",
                  "text": "two",
                },
              ],
            },
          ],
        },
        {
          "$class": "org.accordproject.commonmark@0.5.0.Item",
          "nodes": [
            {
              "$class": "org.accordproject.commonmark@0.5.0.Paragraph",
              "nodes": [
                {
                  "$class": "org.accordproject.commonmark@0.5.0.Text",
                  "text": "three",
                },
              ],
            },
          ],
        },
      ],
      "start": "1",
      "tight": "false",
      "type": "ordered",
    },
    {
      "$class": "org.accordproject.commonmark@0.5.0.Paragraph",
      "nodes": [
        {
          "$class": "org.accordproject.commonmark@0.5.0.Text",
          "text": "Done.",
        },
      ],
    },
  ],
  "xmlns": "http://commonmark.org/xml/1.0",
}
`;

exports[`markdown <-> html converts ol.md to html 2`] = `
"<html>
<head><meta charset="UTF-8"></head>
<body>
<div class="document">
<p>This is an ordered list:</p>

<ol delimiter=period start=1 tight=false>
<li><p>one</p>
</li>
<li><p>two</p>
</li>
<li><p>three</p>
</li></ol><p>Done.</p>
</div>
</body>
</html>"
`;

exports[`markdown <-> html converts ol-tight.md to html 1`] = `
{
  "$class": "org.accordproject.commonmark@0.5.0.Document",
  "nodes": [
    {
      "$class": "org.accordproject.commonmark@0.5.0.Paragraph",
      "nodes": [
        {
          "$class": "org.accordproject.commonmark@0.5.0.Text",
          "text": "This is an ordered list:",
        },
      ],
    },
    {
      "$class": "org.accordproject.commonmark@0.5.0.List",
      "delimiter": "period",
      "nodes": [
        {
          "$class": "org.accordproject.commonmark@0.5.0.Item",
          "nodes": [
            {
              "$class": "org.accordproject.commonmark@0.5.0.Paragraph",
              "nodes": [
                {
                  "$class": "org.accordproject.commonmark@0.5.0.Text",
                  "text": "one",
                },
              ],
            },
          ],
        },
        {
          "$class": "org.accordproject.commonmark@0.5.0.Item",
          "nodes": [
            {
              "$class": "org.accordproject.commonmark@0.5.0.Paragraph",
              "nodes": [
                {
                  "$class": "org.accordproject.commonmark@0.5.0.Text",
                  "text": "two",
                },
              ],
            },
          ],
        },
        {
          "$class": "org.accordproject.commonmark@0.5.0.Item",
          "nodes": [
            {
              "$class": "org.accordproject.commonmark@0.5.0.Paragraph",
              "nodes": [
                {
                  "$class": "org.accordproject.commonmark@0.5.0.Text",
                  "text": "three",
                },
              ],
            },
          ],
        },
      ],
      "start": "1",
      "tight": "true",
      "type": "ordered",
    },
    {
      "$class": "org.accordproject.commonmark@0.5.0.Paragraph",
      "nodes": [
        {
          "$class": "org.accordproject.commonmark@0.5.0.Text",
          "text": "Done.",
        },
      ],
    },
  ],
  "xmlns": "http://commonmark.org/xml/1.0",
}
`;

exports[`markdown <-> html converts ol-tight.md to html 2`] = `
"<html>
<head><meta charset="UTF-8"></head>
<body>
<div class="document">
<p>This is an ordered list:</p>

<ol delimiter=period start=1 tight=true>
<li><p>one</p>
</li>
<li><p>two</p>
</li>
<li><p>three</p>
</li></ol><p>Done.</p>
</div>
</body>
</html>"
`;

exports[`markdown <-> html converts paragraphs.md to html 1`] = `
{
  "$class": "org.accordproject.commonmark@0.5.0.Document",
  "nodes": [
    {
      "$class": "org.accordproject.commonmark@0.5.0.Paragraph",
      "nodes": [
        {
          "$class": "org.accordproject.commonmark@0.5.0.Text",
          "text": "This is first paragraph.",
        },
      ],
    },
    {
      "$class": "org.accordproject.commonmark@0.5.0.Paragraph",
      "nodes": [
        {
          "$class": "org.accordproject.commonmark@0.5.0.Text",
          "text": "This is second paragraph.",
        },
      ],
    },
  ],
  "xmlns": "http://commonmark.org/xml/1.0",
}
`;

exports[`markdown <-> html converts paragraphs.md to html 2`] = `
"<html>
<head><meta charset="UTF-8"></head>
<body>
<div class="document">
<p>This is first paragraph.</p>
<p>This is second paragraph.</p>
</div>
</body>
</html>"
`;

exports[`markdown <-> html converts strong.md to html 1`] = `
{
  "$class": "org.accordproject.commonmark@0.5.0.Document",
  "nodes": [
    {
      "$class": "org.accordproject.commonmark@0.5.0.Paragraph",
      "nodes": [
        {
          "$class": "org.accordproject.commonmark@0.5.0.Text",
          "text": "This is ",
        },
        {
          "$class": "org.accordproject.commonmark@0.5.0.Strong",
          "nodes": [
            {
              "$class": "org.accordproject.commonmark@0.5.0.Text",
              "text": "some",
            },
          ],
        },
        {
          "$class": "org.accordproject.commonmark@0.5.0.Text",
          "text": " text.",
        },
      ],
    },
  ],
  "xmlns": "http://commonmark.org/xml/1.0",
}
`;

exports[`markdown <-> html converts strong.md to html 2`] = `
"<html>
<head><meta charset="UTF-8"></head>
<body>
<div class="document">
<p>This is <strong>some</strong> text.</p>
</div>
</body>
</html>"
`;

exports[`markdown <-> html converts table.md to html 1`] = `
{
  "$class": "org.accordproject.commonmark@0.5.0.Document",
  "nodes": [
    {
      "$class": "org.accordproject.commonmark@0.5.0.Table",
      "nodes": [
        {
          "$class": "org.accordproject.commonmark@0.5.0.TableHead",
          "nodes": [
            {
              "$class": "org.accordproject.commonmark@0.5.0.TableRow",
              "nodes": [
                {
                  "$class": "org.accordproject.commonmark@0.5.0.HeaderCell",
                  "nodes": [
                    {
                      "$class": "org.accordproject.commonmark@0.5.0.Text",
                      "text": "Header1",
                    },
                  ],
                },
                {
                  "$class": "org.accordproject.commonmark@0.5.0.HeaderCell",
                  "nodes": [
                    {
                      "$class": "org.accordproject.commonmark@0.5.0.Text",
                      "text": "Header 2",
                    },
                  ],
                },
              ],
            },
          ],
        },
        {
          "$class": "org.accordproject.commonmark@0.5.0.TableBody",
          "nodes": [
            {
              "$class": "org.accordproject.commonmark@0.5.0.TableRow",
              "nodes": [
                {
                  "$class": "org.accordproject.commonmark@0.5.0.TableCell",
                  "nodes": [
                    {
                      "$class": "org.accordproject.commonmark@0.5.0.Text",
                      "text": "Simple",
                    },
                  ],
                },
                {
                  "$class": "org.accordproject.commonmark@0.5.0.TableCell",
                  "nodes": [
                    {
                      "$class": "org.accordproject.commonmark@0.5.0.Text",
                      "text": "Table",
                    },
                  ],
                },
              ],
            },
            {
              "$class": "org.accordproject.commonmark@0.5.0.TableRow",
              "nodes": [
                {
                  "$class": "org.accordproject.commonmark@0.5.0.TableCell",
                  "nodes": [
                    {
                      "$class": "org.accordproject.commonmark@0.5.0.Text",
                      "text": "Paragraph",
                    },
                  ],
                },
                {
                  "$class": "org.accordproject.commonmark@0.5.0.TableCell",
                  "nodes": [
                    {
                      "$class": "org.accordproject.commonmark@0.5.0.Text",
                      "text": "Text",
                    },
                  ],
                },
              ],
            },
          ],
        },
      ],
    },
  ],
  "xmlns": "http://commonmark.org/xml/1.0",
}
`;

exports[`markdown <-> html converts table.md to html 2`] = `
"<html>
<head><meta charset="UTF-8"></head>
<body>
<div class="document">

<table>
<thead>
<tr>
<th>Header1</th>
<th>Header 2</th>
</tr>
</thead>
<tbody>
<tr>
<td>Simple</td>
<td>Table</td>
</tr>
<tr>
<td>Paragraph</td>
<td>Text</td>
</tr>
</tbody>
</table>
</div>
</body>
</html>"
`;

exports[`markdown <-> html converts table_complex.md to html 1`] = `
{
  "$class": "org.accordproject.commonmark@0.5.0.Document",
  "nodes": [
    {
      "$class": "org.accordproject.commonmark@0.5.0.Table",
      "nodes": [
        {
          "$class": "org.accordproject.commonmark@0.5.0.TableHead",
          "nodes": [
            {
              "$class": "org.accordproject.commonmark@0.5.0.TableRow",
              "nodes": [
                {
                  "$class": "org.accordproject.commonmark@0.5.0.HeaderCell",
                  "nodes": [
                    {
                      "$class": "org.accordproject.commonmark@0.5.0.Text",
                      "text": "Column1",
                    },
                  ],
                },
                {
                  "$class": "org.accordproject.commonmark@0.5.0.HeaderCell",
                  "nodes": [
                    {
                      "$class": "org.accordproject.commonmark@0.5.0.Text",
                      "text": "Column 2",
                    },
                  ],
                },
              ],
            },
          ],
        },
        {
          "$class": "org.accordproject.commonmark@0.5.0.TableBody",
          "nodes": [
            {
              "$class": "org.accordproject.commonmark@0.5.0.TableRow",
              "nodes": [
                {
                  "$class": "org.accordproject.commonmark@0.5.0.TableCell",
                  "nodes": [
                    {
                      "$class": "org.accordproject.commonmark@0.5.0.Code",
                      "text": "code block",
                    },
                  ],
                },
                {
                  "$class": "org.accordproject.commonmark@0.5.0.TableCell",
                  "nodes": [
                    {
                      "$class": "org.accordproject.commonmark@0.5.0.Image",
                      "destination": "https://docs.accordproject.org/docs/assets/020/template.png",
                      "nodes": [],
                      "title": "AP triangle",
                    },
                  ],
                },
              ],
            },
            {
              "$class": "org.accordproject.commonmark@0.5.0.TableRow",
              "nodes": [
                {
                  "$class": "org.accordproject.commonmark@0.5.0.TableCell",
                  "nodes": [
                    {
                      "$class": "org.accordproject.commonmark@0.5.0.Text",
                      "text": "Paragraph",
                    },
                  ],
                },
                {
                  "$class": "org.accordproject.commonmark@0.5.0.TableCell",
                  "nodes": [
                    {
                      "$class": "org.accordproject.commonmark@0.5.0.Strong",
                      "nodes": [
                        {
                          "$class": "org.accordproject.commonmark@0.5.0.Text",
                          "text": "Bold content",
                        },
                      ],
                    },
                  ],
                },
              ],
            },
            {
              "$class": "org.accordproject.commonmark@0.5.0.TableRow",
              "nodes": [
                {
                  "$class": "org.accordproject.commonmark@0.5.0.TableCell",
                  "nodes": [
                    {
                      "$class": "org.accordproject.commonmark@0.5.0.Link",
                      "destination": "http://clause.io",
                      "nodes": [
                        {
                          "$class": "org.accordproject.commonmark@0.5.0.Text",
                          "text": "link",
                        },
                      ],
                      "title": "",
                    },
                  ],
                },
                {
                  "$class": "org.accordproject.commonmark@0.5.0.TableCell",
                  "nodes": [
                    {
                      "$class": "org.accordproject.commonmark@0.5.0.Emph",
                      "nodes": [
                        {
                          "$class": "org.accordproject.commonmark@0.5.0.Text",
                          "text": "Italics",
                        },
                      ],
                    },
                  ],
                },
              ],
            },
          ],
        },
      ],
    },
  ],
  "xmlns": "http://commonmark.org/xml/1.0",
}
`;

exports[`markdown <-> html converts table_complex.md to html 2`] = `
"<html>
<head><meta charset="UTF-8"></head>
<body>
<div class="document">

<table>
<thead>
<tr>
<th>Column1</th>
<th>Column 2</th>
</tr>
</thead>
<tbody>
<tr>
<td><code>code block</code></td>
<td><img src="https://docs.accordproject.org/docs/assets/020/template.png" title="AP triangle"/></td>
</tr>
<tr>
<td>Paragraph</td>
<td><strong>Bold content</strong></td>
</tr>
<tr>
<td><a href="http://clause.io" title=>link</a></td>
<td><em>Italics</em></td>
</tr>
</tbody>
</table>
</div>
</body>
</html>"
`;

exports[`markdown <-> html converts text.md to html 1`] = `
{
  "$class": "org.accordproject.commonmark@0.5.0.Document",
  "nodes": [
    {
      "$class": "org.accordproject.commonmark@0.5.0.Paragraph",
      "nodes": [
        {
          "$class": "org.accordproject.commonmark@0.5.0.Text",
          "text": "This is some text.",
        },
      ],
    },
  ],
  "xmlns": "http://commonmark.org/xml/1.0",
}
`;

exports[`markdown <-> html converts text.md to html 2`] = `
"<html>
<head><meta charset="UTF-8"></head>
<body>
<div class="document">
<p>This is some text.</p>
</div>
</body>
</html>"
`;

exports[`markdown <-> html converts thematicbreak.md to html 1`] = `
{
  "$class": "org.accordproject.commonmark@0.5.0.Document",
  "nodes": [
    {
      "$class": "org.accordproject.commonmark@0.5.0.Paragraph",
      "nodes": [
        {
          "$class": "org.accordproject.commonmark@0.5.0.Text",
          "text": "This is",
        },
      ],
    },
    {
      "$class": "org.accordproject.commonmark@0.5.0.ThematicBreak",
    },
    {
      "$class": "org.accordproject.commonmark@0.5.0.Paragraph",
      "nodes": [
        {
          "$class": "org.accordproject.commonmark@0.5.0.Text",
          "text": "A footer.",
        },
      ],
    },
  ],
  "xmlns": "http://commonmark.org/xml/1.0",
}
`;

exports[`markdown <-> html converts thematicbreak.md to html 2`] = `
"<html>
<head><meta charset="UTF-8"></head>
<body>
<div class="document">
<p>This is</p>

<hr>
<p>A footer.</p>
</div>
</body>
</html>"
`;

exports[`markdown <-> html converts ul.md to html 1`] = `
{
  "$class": "org.accordproject.commonmark@0.5.0.Document",
  "nodes": [
    {
      "$class": "org.accordproject.commonmark@0.5.0.Paragraph",
      "nodes": [
        {
          "$class": "org.accordproject.commonmark@0.5.0.Text",
          "text": "This is an unordered list:",
        },
      ],
    },
    {
      "$class": "org.accordproject.commonmark@0.5.0.List",
      "nodes": [
        {
          "$class": "org.accordproject.commonmark@0.5.0.Item",
          "nodes": [
            {
              "$class": "org.accordproject.commonmark@0.5.0.Paragraph",
              "nodes": [
                {
                  "$class": "org.accordproject.commonmark@0.5.0.Text",
                  "text": "one",
                },
              ],
            },
          ],
        },
        {
          "$class": "org.accordproject.commonmark@0.5.0.Item",
          "nodes": [
            {
              "$class": "org.accordproject.commonmark@0.5.0.Paragraph",
              "nodes": [
                {
                  "$class": "org.accordproject.commonmark@0.5.0.Text",
                  "text": "two",
                },
              ],
            },
          ],
        },
        {
          "$class": "org.accordproject.commonmark@0.5.0.Item",
          "nodes": [
            {
              "$class": "org.accordproject.commonmark@0.5.0.Paragraph",
              "nodes": [
                {
                  "$class": "org.accordproject.commonmark@0.5.0.Text",
                  "text": "three",
                },
              ],
            },
          ],
        },
      ],
      "tight": "false",
      "type": "bullet",
    },
    {
      "$class": "org.accordproject.commonmark@0.5.0.Paragraph",
      "nodes": [
        {
          "$class": "org.accordproject.commonmark@0.5.0.Text",
          "text": "Done.",
        },
      ],
    },
  ],
  "xmlns": "http://commonmark.org/xml/1.0",
}
`;

exports[`markdown <-> html converts ul.md to html 2`] = `
"<html>
<head><meta charset="UTF-8"></head>
<body>
<div class="document">
<p>This is an unordered list:</p>

<ul tight=false>
<li><p>one</p>
</li>
<li><p>two</p>
</li>
<li><p>three</p>
</li></ul><p>Done.</p>
</div>
</body>
</html>"
`;

exports[`markdown <-> html converts ul-tight.md to html 1`] = `
{
  "$class": "org.accordproject.commonmark@0.5.0.Document",
  "nodes": [
    {
      "$class": "org.accordproject.commonmark@0.5.0.Paragraph",
      "nodes": [
        {
          "$class": "org.accordproject.commonmark@0.5.0.Text",
          "text": "This is an unordered list:",
        },
      ],
    },
    {
      "$class": "org.accordproject.commonmark@0.5.0.List",
      "nodes": [
        {
          "$class": "org.accordproject.commonmark@0.5.0.Item",
          "nodes": [
            {
              "$class": "org.accordproject.commonmark@0.5.0.Paragraph",
              "nodes": [
                {
                  "$class": "org.accordproject.commonmark@0.5.0.Text",
                  "text": "one",
                },
              ],
            },
          ],
        },
        {
          "$class": "org.accordproject.commonmark@0.5.0.Item",
          "nodes": [
            {
              "$class": "org.accordproject.commonmark@0.5.0.Paragraph",
              "nodes": [
                {
                  "$class": "org.accordproject.commonmark@0.5.0.Text",
                  "text": "two",
                },
              ],
            },
          ],
        },
        {
          "$class": "org.accordproject.commonmark@0.5.0.Item",
          "nodes": [
            {
              "$class": "org.accordproject.commonmark@0.5.0.Paragraph",
              "nodes": [
                {
                  "$class": "org.accordproject.commonmark@0.5.0.Text",
                  "text": "three",
                },
              ],
            },
          ],
        },
      ],
      "tight": "true",
      "type": "bullet",
    },
    {
      "$class": "org.accordproject.commonmark@0.5.0.Paragraph",
      "nodes": [
        {
          "$class": "org.accordproject.commonmark@0.5.0.Text",
          "text": "Done.",
        },
      ],
    },
  ],
  "xmlns": "http://commonmark.org/xml/1.0",
}
`;

exports[`markdown <-> html converts ul-tight.md to html 2`] = `
"<html>
<head><meta charset="UTF-8"></head>
<body>
<div class="document">
<p>This is an unordered list:</p>

<ul tight=true>
<li><p>one</p>
</li>
<li><p>two</p>
</li>
<li><p>three</p>
</li></ul><p>Done.</p>
</div>
</body>
</html>"
`;

exports[`markdown <-> html converts unwrapped <li> to html 1`] = `
{
  "$class": "org.accordproject.commonmark@0.5.0.Document",
  "nodes": [
    {
      "$class": "org.accordproject.commonmark@0.5.0.Paragraph",
      "nodes": [
        {
          "$class": "org.accordproject.commonmark@0.5.0.Text",
          "text": "Hello",
        },
      ],
    },
    {
      "$class": "org.accordproject.commonmark@0.5.0.Item",
      "nodes": [
        {
          "$class": "org.accordproject.commonmark@0.5.0.Text",
          "text": "list item",
        },
      ],
    },
    {
      "$class": "org.accordproject.commonmark@0.5.0.Paragraph",
      "nodes": [
        {
          "$class": "org.accordproject.commonmark@0.5.0.Text",
          "text": "World.",
        },
      ],
    },
  ],
  "xmlns": "http://commonmark.org/xml/1.0",
}
`;

exports[`markdown <-> html converts unwrapped <li> to html 2`] = `
"Hello
-  list item

World."
`;
